community/qxmpp: upgrade to 1.10.3

--- a/community/qxmpp/APKBUILD
+++ b/community/qxmpp/APKBUILD
@@ -1,6 +1,6 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qxmpp
-pkgver=1.10.2
+pkgver=1.10.3
 pkgrel=0
 pkgdesc="Cross-platform C++ XMPP client and server library"
 arch="all"
@@ -16,8 +16,9 @@ makedepends="
 	qt6-qt5compat-dev
 	samurai
 	"
-source="https://github.com/qxmpp-project/qxmpp/archive/v$pkgver/qxmpp-v$pkgver.tar.gz"
+source="https://invent.kde.org/libraries/qxmpp/-/archive/v$pkgver/qxmpp-v$pkgver.tar.gz"
 subpackages="$pkgname-dev $pkgname-doc"
+builddir="$srcdir/$pkgname-v$pkgver"
 
 build() {
 	cmake -B build -G Ninja \
@@ -40,5 +41,5 @@ package() {
 }
 
 sha512sums="
-6e57eb4cfea65870a9ea8272e1e7120e379876bda57e077384d492a2743f54083378913d117dd0d700ec6028f423161041a32903ccc684acd3c3f2efbae9417e  qxmpp-v1.10.2.tar.gz
+ef08c38563fdc43aa9a5c1e531c25bb87f71541379ead4513c5fdfcb9c8c256d99008099bf59219e60025a4ad3deb18eabc3391c5fb6078e684f515ee189353d  qxmpp-v1.10.3.tar.gz
 "
