--- a/community/kaidan/APKBUILD
+++ b/community/kaidan/APKBUILD
@@ -2,10 +2,10 @@
 # group=kde-other
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=kaidan
-pkgver=0.11.0
+pkgver=0.12.0
 pkgrel=0
 pkgdesc="Kaidan, a simple and user-friendly Jabber/XMPP client for every device and platform"
-# armhf blocked by qt5-qtdeclarative
+# armhf blocked by qt6-qtdeclarative
 # riscv64 blocked by kquickimageeditor5
 arch="all !armhf !riscv64"
 url="https://invent.kde.org/network/kaidan"
@@ -18,6 +18,7 @@ depends="
 	"
 makedepends="
 	extra-cmake-modules
+	kdsingleapplication-dev
 	kio-dev
 	kirigami-addons-dev
 	kirigami-dev
@@ -53,5 +54,5 @@ package() {
 }
 
 sha512sums="
-e85e47eb7b487092935e2870f672049a4fd11c2f4a9032f04d75227cd6a282237341d835d65064341f43619afd4207722975c092e38d1c538a26be77565ee7b0  kaidan-0.11.0.tar.xz
+a350102c184e61370b449030021191bf6ad21419ba66a3c11adcd418f92d5b85397f9b8cb4027c2155f12345c27896a6bb80b819ef59e9e6142fb14c85603b67  kaidan-0.12.0.tar.xz
 "
