testing/tauri-cli: upgrade to 2.4.0

--- a/testing/tauri-cli/APKBUILD
+++ b/testing/tauri-cli/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=tauri-cli
-pkgver=1.6.2
+pkgver=2.4.0
 pkgrel=0
-pkgdesc="Tauri cargo cli tool"
+pkgdesc="Command line interface for building Tauri apps"
 url="https://github.com/tauri-apps/tauri"
 # tauri doesn't support the others anyway
 arch="aarch64 armv7 x86 x86_64"
@@ -13,9 +13,8 @@ makedepends="
 	cargo-auditable
 	openssl-dev
 	"
-source="$pkgname-$pkgver.tar.gz::https://github.com/tauri-apps/tauri/releases/download/tauri-cli-v$pkgver/tauri-cli-$pkgver.crate"
+source="$pkgname-$pkgver.tar.gz::https://crates.io/api/v1/crates/tauri-cli/$pkgver/download"
 options="net !check" # no tests
-
 
 prepare() {
 	default_prepare
@@ -31,5 +30,5 @@ package() {
 }
 
 sha512sums="
-8b9bdb1122962abee1e6192237d82ce567887edba00df0400317c3938c5239106f82acbcbd5cf8267641ba70d9899b577cde036cb4b710a0c0035fc8d92f4ab5  tauri-cli-1.6.2.tar.gz
+4868613e85a5d17e2cd958d82788672491492484766f26bfd01c83d1a6d441caf9e490b71e2d15218edd6a45cab17fcc62c1eb02939cdde49d1dc81eb5881e11  tauri-cli-2.4.0.tar.gz
 "
