testing/cargo-sort: upgrade to 1.1.0

--- a/testing/cargo-sort/APKBUILD
+++ b/testing/cargo-sort/APKBUILD
@@ -1,21 +1,19 @@
 # Contributor: Matthias Ahouansou <matthias@ahouansou.cz>
 # Maintainer: Matthias Ahouansou <matthias@ahouansou.cz>
 pkgname=cargo-sort
-pkgver=1.0.9_git20240110
-_gitrev=55ec89082466f6bb246d870a8d56d166a8e1f08b
+pkgver=1.1.0
 pkgrel=0
 pkgdesc="Check if tables and items in a .toml file are lexically sorted"
 url="https://github.com/DevinR528/cargo-sort"
-# loongarch64: blocked by libc crate
-arch="all !loongarch64"
+arch="all"
 license="MIT OR Apache-2.0"
 makedepends="cargo-auditable"
 depends="cargo"
 source="
-	$pkgname-$_gitrev.tar.gz::https://github.com/DevinR528/cargo-sort/archive/$_gitrev.tar.gz
+	$pkgname-$pkgver.tar.gz::https://github.com/DevinR528/cargo-sort/archive/refs/tags/v$pkgver.tar.gz
+	bump-libc.patch
 "
 options="net"
-builddir="$srcdir/$pkgname-$_gitrev"
 
 prepare() {
 	default_prepare
@@ -35,5 +33,6 @@ package() {
 }
 
 sha512sums="
-064ccafb11d250bb20453eba55eb1b108f1cb6ef3dda4728f0462a2d4c011da884443c7fd4de7b7d2a1cc8ac3ac4cf0ca1658c08f0be561844fc9e7553a430a1  cargo-sort-55ec89082466f6bb246d870a8d56d166a8e1f08b.tar.gz
+5ed7e3d1ded56f59fcb13f29b1716b339f8159746263b8b027519032fb80c5f44641d8a43e86e0eff55f7a9aa97cb65e5ee2519772767cdd575cd922f4c819ba  cargo-sort-1.1.0.tar.gz
+89da611f0387c279dfc4d54f4828c09135f9542e33fe8c429e56b5d9c54ee8e845e8647da3bc98d6c072cc2b2e02dc35bb2bf71870fe185271ffc6db1a5e8c5e  bump-libc.patch
 "
