main/openrc: provide PAM configuration for openrc-user
See https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/81612#note_492385

--- a/main/openrc/APKBUILD
+++ b/main/openrc/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=openrc
 pkgver=0.60.1
 _ver=${pkgver/_git*/}
-pkgrel=1
+pkgrel=2
 pkgdesc="OpenRC manages the services, startup and shutdown of a host"
 url="https://github.com/OpenRC/openrc"
 arch="all"
@@ -53,6 +53,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/OpenRC/openrc/archive/$pkgve
 	test-networking.sh
 
 	modules.7.scd
+	openrc-user.pam
 	"
 options="!check" # not updated to meson build system, require makefile build
 provides="ifupdown-ng-openrc=0.12.1-r4"
@@ -221,6 +222,9 @@ _user_pam() {
 	amove usr/lib/security/pam_openrc.so
 	amove usr/libexec/rc/bin/openrc-user-pam
 	ln -s openrc-user-pam "$subpkgdir"/usr/libexec/rc/bin/openrc-user
+
+	install -Dm644 "$srcdir"/openrc-user.pam \
+		"$subpkgdir"/etc/pam.d/openrc-user
 }
 
 sha512sums="
@@ -250,4 +254,5 @@ d76c75c58e6f4b0801edac4e081b725ef3d50a9a8c9bbb5692bf4d0f804af7d383bf71a73d5d03ed
 a60129f4bed134a27773c61994d114b3a5d1ab9f20097b096956f5bb696c056f4a608577cabb34c32b51899c69dce3bd0d8ffa61f5b66fd00fc5085d1ebba54f  machine-id.initd
 af17947aa3954e317dc06580da829200e0b0f2ddc37ce842c3fc7fc0d8ca2f40220e4f4665f61b4b5ec47c96416db0127e2ed979b9421bf21df89d4c4f998b7f  test-networking.sh
 edf23bbec3c67457f3039d193cd3a756a079ab080e5e3d87e724a1a0d9be86b82797bf2bf5280fbf33d1c60b98e3859d9d9c265f8119a84ccdcaa9937ab72296  modules.7.scd
+fa0be773e472f913d83539de4f86b121331ada79ebaf76e01d23f9631604ae2fef7edab993b7071def6ccab0adc15a4b31cf1527441b9fa01a714f0b570023ec  openrc-user.pam
 "
