--- a/community/py3-pychromecast/APKBUILD
+++ b/community/py3-pychromecast/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: Magnus Sandin <magnus.sandin@valitron.se>
+# Maintainer: Magnus Sandin <magnus.sandin@gmail.com>
 pkgname=py3-pychromecast
-pkgver=14.0.5
-pkgrel=1
+pkgver=14.0.6
+pkgrel=0
 pkgdesc="Python module to talk to Google Chromecast"
 url="https://github.com/home-assistant-libs/pychromecast"
 arch="noarch"
@@ -20,9 +20,9 @@ makedepends="
 	py3-wheel
 	"
 subpackages="$pkgname-pyc"
-source="https://pypi.python.org/packages/source/P/PyChromecast/PyChromecast-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/home-assistant-libs/pychromecast/archive/refs/tags/$pkgver.tar.gz"
 options="!check" # No tests
-builddir="$srcdir/PyChromecast-$pkgver"
+builddir="$srcdir/pychromecast-$pkgver"
 
 provides="py3-chromecast=$pkgver-r$pkgrel" # Backwards compatibility
 replaces="py3-chromecast" # Backwards compatibility
@@ -39,5 +39,5 @@ package() {
 }
 
 sha512sums="
-9627ad6f67b4625e44b56f72e05e0a673396b8c89a542de896beb14f186c86974397878eab8ff42652b987a0524541575797ebea18098a8cdaadf78f9bdfa6d7  PyChromecast-14.0.5.tar.gz
+4a81f3cc1f3e5ae1893d0ef2d753be05135185e34d84206c69b3fdabd24445f276d25e1dcfdf28940174fb9ec28776b39be3d3e4f81d406b376727ce88614791  py3-pychromecast-14.0.6.tar.gz
 "
