testing/electron: restore so-name prefix

--- a/testing/electron/APKBUILD
+++ b/testing/electron/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=electron
 pkgver=34.3.4
 _gittag=v"${pkgver/_beta/-beta.}"
-pkgrel=0
+pkgrel=1
 _chromium=132.0.6834.210
 _copium_tag=131.2
 _depot_tools=495b23b39aaba2ca3b55dd27cadc523f1cb17ee6
@@ -154,6 +154,8 @@ _copium_patches="
 	cr129-ffmpeg-no-noh264parse.patch
 	cr131-v8-non4k-pages.patch
 	"
+# Avoid conflicting providers
+sonameprefix="$pkgname:"
 # tests are todo for some base checks
 options="!check net suid"
 builddir="$srcdir/electron-$_gittag-$_chromium"
