--- a/main/dtc/APKBUILD
+++ b/main/dtc/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=dtc
-pkgver=1.7.0
-pkgrel=2
+pkgver=1.7.2
+pkgrel=0
 pkgdesc="Device Tree Compiler"
 url="https://git.kernel.org/pub/scm/utils/dtc/dtc.git/"
 arch="all"
@@ -18,8 +18,7 @@ checkdepends="coreutils"
 subpackages="$pkgname-dev libfdt py3-libfdt-pyc py3-libfdt:py3_libfdt"
 source="https://kernel.org/pub/software/utils/dtc/dtc-$pkgver.tar.xz
 	install-pylibfdt-to-destdir.patch
-	pyscm.patch
-	fix-tests-for-Python3.12.patch
+	swig-4.3.patch
 	"
 
 prepare() {
@@ -54,8 +53,7 @@ py3_libfdt() {
 }
 
 sha512sums="
-d3ba6902a9a2f2cdbaff55f12fca3cfe4a1ec5779074a38e3d8b88097c7abc981835957e8ce72971e10c131e05fde0b1b961768e888ff96d89e42c75edb53afb  dtc-1.7.0.tar.xz
+30f3611175a5c29556282f3f2894701a5837eb869608d89d78c280af448bbc3a5b6c83f51c28f991847c0eb7c42aa57599bbc31433f1b3b2c8d162cb2169b91f  dtc-1.7.2.tar.xz
 1c43dfae8d15861c4f0170f0df9ba63d197ab3be50e39fe5748e547074c52dc7b042ca5e9c64d3d4bb0a8e8cde8df7e71660cde93e9512923405c38debcaa01c  install-pylibfdt-to-destdir.patch
-e74768f6bcbe0ba8060c7b0b449e533b2fbbf3ddc1c869b98cf3f78a858c63ba1d7d57b5163eb5be048c6f0be023360f709d621e2f88d4332a7ef8e8d125cc09  pyscm.patch
-2fc10469b4c1f5016cdccd1a1e24d1f0984267c88efe88d268d52d9a49c441d832f53bf004a5223810c82e0f10cf5b515d6a6ddb56e49ca5bb86b55724634f0b  fix-tests-for-Python3.12.patch
+a615a9fb89691548e7c40e27dc6a06c371f76ee3945650c4bb21d36898aaf211a9cc90e2ba2a7710ae177f187f21d21eee6e77ad531eda49be1f89bef4371b75  swig-4.3.patch
 "
