--- a/main/ada/APKBUILD
+++ b/main/ada/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=ada
 # NOTE: The primary use of this library is for main/nodejs and community/nodejs-current.
 pkgver=2.9.2
-pkgrel=2
+pkgrel=3
 pkgdesc="WHATWG-compliant and fast URL parser written in modern C++"
 url="https://ada-url.github.io/ada"
 arch="all"
@@ -18,10 +18,19 @@ makedepends="
 	"
 checkdepends="simdjson-dev"
 subpackages="$pkgname-static $pkgname-dev $pkgname-libs"
+_cpmver="0.38.6"
 source="https://github.com/ada-url/ada/archive/v$pkgver/ada-$pkgver.tar.gz
+	CPM_$_cpmver.cmake::https://github.com/cpm-cmake/CPM.cmake/releases/download/v$_cpmver/CPM.cmake
 	use-system-deps.patch
 	ada.pc.in
 	"
+
+prepare() {
+	default_prepare
+
+	mkdir -p "$tmpdir"/cpm
+	mv "$srcdir"/CPM_$_cpmver.cmake "$tmpdir"/cpm/
+}
 
 build() {
 	local crossopts=
@@ -35,6 +44,7 @@ build() {
 			-DBUILD_SHARED_LIBS=$shared \
 			-DBUILD_TESTING="$(want_check && echo ON || echo OFF)" \
 			-DADA_BENCHMARKS=OFF \
+			-DCPM_SOURCE_CACHE="$tmpdir" \
 			$crossopts
 		cmake --build build
 	done
@@ -61,6 +71,7 @@ tools() {
 
 sha512sums="
 bc876db537153d6b0599215ca8be8261bceca6d213fcc63af5fda13c1b32876496cb8d4e98c787f17317cf8ffd1940431551513807f1a18f9ce993fad35f5ec6  ada-2.9.2.tar.gz
+4cf8400c408dbaeae7552dac83f6ee3124ff31504975c6c979092101db6fecbbd3e6d80145ce7d3fc437eb254780468c58662c39222b1a2c4770eba790f6a195  CPM_0.38.6.cmake
 dfe19bc20e9aeb8aaed96a6d6494108d762f57a8b2beb23e5ea53b2cd97aab1aee3e3eee017d5f25c42018dd0f5be868a207accfefa79ccc5b4c3449183a983f  use-system-deps.patch
 3fc43305ca84108b0a0bb72f4ebefee04accb4998ed3f19f8c0fa37a732e9e8439231cd35d6dffc09a3ccc8a4de9027c8003dc0fb0aa2cf14bf6bd730360e1f7  ada.pc.in
 "
