community/gnome-keyring: move PAM module to subpackage
This subpackage is installed by default, but its installation can be
prevented via `apk add !gnome-keyring-pam`. This is useful for users
that don't want auto starting of the gnome keyring daemon via the PAM
module.

Fixes #16999

--- a/community/gnome-keyring/APKBUILD
+++ b/community/gnome-keyring/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=gnome-keyring
 pkgver=46.2
-pkgrel=2
+pkgrel=3
 pkgdesc="GNOME keyring"
 url="https://wiki.gnome.org//Projects/GnomeKeyring"
 arch="all"
@@ -32,7 +32,7 @@ provides="dbus:org.freedesktop.Secrets"
 # Highest priority of the bunch since it has the least deps
 provider_priority=100
 options="!check" # Failing tests on 32-bit architectures
-subpackages="$pkgname-lang $pkgname-doc $pkgname-openrc"
+subpackages="$pkgname-lang $pkgname-doc $pkgname-openrc $pkgname-pam"
 source="https://download.gnome.org/sources/gnome-keyring/${pkgver%.*}/gnome-keyring-$pkgver.tar.xz
 	0001-build-Use-p11_module_configs-as-default-pkcs11-confi.patch
 	gnome-keyring.confd
@@ -64,6 +64,17 @@ package() {
 		"$pkgdir"/etc/user/init.d/gnome-keyring
 	install -Dm644 "$srcdir"/gnome-keyring.confd \
 		"$pkgdir"/etc/user/conf.d/gnome-keyring
+}
+
+pam() {
+	pkgdesc="PAM module for gnome-keyring"
+	depends=""
+	# Allows disabling installation of the PAM module via `apk add !gnome-keyring-pam`.
+	#
+	# See https://gitlab.alpinelinux.org/alpine/aports/-/issues/16999
+	install_if="$pkgname=$pkgver-r$pkgrel"
+
+	amove usr/lib/security/pam*
 }
 
 sha512sums="
