community/objfw: upgrade to 1.3

--- a/community/objfw/APKBUILD
+++ b/community/objfw/APKBUILD
@@ -1,14 +1,22 @@
 # Contributor: Jonathan Schleifer <js@nil.im>
 # Maintainer: Jonathan Schleifer <js@nil.im>
 pkgname=objfw
-pkgver=1.2.4
+pkgver=1.3
 pkgrel=0
 pkgdesc="Portable, lightweight framework for the Objective-C language"
 url="https://objfw.nil.im/"
 arch="all"
 license="LGPL-3.0-only"
-makedepends="clang17 openssl-dev doxygen autoconf automake linux-headers"
-subpackages="$pkgname-dev $pkgname-doc
+_llvmver=17
+makedepends="
+	clang$_llvmver
+	openssl-dev
+	zlib-dev
+	doxygen
+	autoconf
+	automake
+	linux-headers"
+subpackages="$pkgname-dev $pkgname-dbg $pkgname-doc
 	libobjfw1:_libobjfw
 	libobjfwhid1:_libobjfwhid
 	libobjfwrt1:_libobjfwrt
@@ -118,5 +126,5 @@ _ofhttp() {
 }
 
 sha512sums="
-fc3a2188dc5d04730dc9650d73c55e264bc5f095776731f2b425a16ff4468f456b4187c64a6f2b8e8b9a9f9a2629d80dd3a23b7ef2b9087b256b713240f09e9d  objfw-1.2.4.tar.gz
+0f329040782b6f9b509cd1474b245f9383f13e7ec06926bd88271a8062e7e6626cc97a4868718b0dde45454566b15001b4fa55418e48f4c1578c1d9a6396a088  objfw-1.3.tar.gz
 "
