community/stellarium: upgrade to 25.1
https://github.com/Stellarium/stellarium/releases/tag/v25.1

--- a/community/stellarium/APKBUILD
+++ b/community/stellarium/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=stellarium
-pkgver=24.4
+pkgver=25.1
 pkgrel=0
 pkgdesc="A stellarium with great graphics and a nice database of sky-objects"
 url="https://stellarium.org/"
@@ -26,9 +26,7 @@ makedepends="
 	samurai
 	"
 subpackages="$pkgname-doc"
-source="https://github.com/Stellarium/stellarium/releases/download/v$pkgver/stellarium-$pkgver.tar.xz
-	include-sys-select.patch
-	"
+source="https://github.com/Stellarium/stellarium/releases/download/v$pkgver/stellarium-$pkgver.tar.xz"
 
 build() {
 	# SHOWMYSKY support needs qt5-qtopengl
@@ -51,6 +49,5 @@ package() {
 }
 
 sha512sums="
-07a24fa9fc1f4e1c862925751d37169e391cf161decc764baa470406a3ce4e5fa15cf224f1affd7aab1cb224f66a49db1bd65bdd70dbdb43cc2e3c7b9ae92b9a  stellarium-24.4.tar.xz
-ebd63d874921ff45a37bc28376260b76c4f51447e816c60255225494140aef29fc660f4934348d45a1822e8c684a87c93fa5c8f16087daba9d35fcef2a2734d8  include-sys-select.patch
+c413e31994e98e69b85885ee2114847e9d5d541e0c5fcc213f4a0af1c520eadddbdc1873815f1a827cad6c15f644f2422f477d0fc96ec68e2afe58d83a75bbee  stellarium-25.1.tar.xz
 "
