community/zotero: skip test unit that passes in CI but on builders

--- a/community/zotero/APKBUILD
+++ b/community/zotero/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=zotero
 pkgver=7.0.15
-pkgrel=0
+pkgrel=1
 _fxver=115.16.0
 _gittag=$pkgver
 pkgdesc="A free, easy-to-use tool to help you collect, organize, cite, and share your research sources."
@@ -335,8 +335,10 @@ check() {
 	## should add an epub...: can't find file stub.epub. Suspect broken test unit
 	## should download a missing file: tends to fail
 	## should download a missing file | should remove a tag...: broken on armv7, needs investigation
+	## should handle race condition with /saveItems: passes in CI but not on builders
 	echo "should add an EPUB from a URL with a redirect" > skip-tests
 	echo "should download a missing file" >> skip-tests
+	echo "should handle race condition with /saveItems" >> skip-tests
 	case $CARCH in
 		armv7)
 			echo "should remove a tag when an item is removed from a collection" >> skip-tests
