--- a/main/ngrep/APKBUILD
+++ b/main/ngrep/APKBUILD
@@ -11,7 +11,9 @@ license="custom"
 makedepends="autoconf automake libpcap-dev pcre-dev"
 options="!check"
 subpackages="$pkgname-dbg $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/jpr5/ngrep/archive/V$_pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/jpr5/ngrep/archive/V$_pkgver.tar.gz
+	inc.patch
+	"
 builddir="$srcdir"/$pkgname-$_pkgver
 
 prepare() {
@@ -40,4 +42,7 @@ package() {
 	install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
 
-sha512sums="47ba65878df6b555701c866721a8a935eabdcce636d398284cbfe5f63baf68c62d994a2f373ea4fc8f44fbed3eecee149f2ee48d39c71c04d34e5a088db8c657  ngrep-1.47.tar.gz"
+sha512sums="
+47ba65878df6b555701c866721a8a935eabdcce636d398284cbfe5f63baf68c62d994a2f373ea4fc8f44fbed3eecee149f2ee48d39c71c04d34e5a088db8c657  ngrep-1.47.tar.gz
+0e6e5d5c018f1aebefd764091158d3b5bb0fda0463cc1fc4062690d653422b920be374ce49535459bfc48b2509e4a95903392de482bb8b15ef831cf6c2eb3392  inc.patch
+"
