--- a/main/apache-mod-auth-kerb/APKBUILD
+++ b/main/apache-mod-auth-kerb/APKBUILD
@@ -36,13 +36,15 @@ package() {
 	mkdir -p "$pkgdir"/etc/apache2/conf.d
 	mkdir -p "$pkgdir"/usr/lib/apache2
 	install -D -m755 ./src/.libs/*.so "$pkgdir"/usr/lib/apache2
-	install -D -m644 ../../mod-auth-kerb.conf "$pkgdir"/etc/apache2/conf.d/mod-auth-kerb.conf
+	install -D -m644 "$srcdir"/mod-auth-kerb.conf "$pkgdir"/etc/apache2/conf.d/mod-auth-kerb.conf
 }
 
-sha512sums="93fdf0e43af1c24e8c8204d09240b708747068ef99dd8d21b45cb4d132d31e6d582d49ea5e23b905f55cb0d4a20b1ecb58de1bcbfdad1d016e536fc622b63214  mod_auth_kerb-5.4.tar.gz
+sha512sums="
+93fdf0e43af1c24e8c8204d09240b708747068ef99dd8d21b45cb4d132d31e6d582d49ea5e23b905f55cb0d4a20b1ecb58de1bcbfdad1d016e536fc622b63214  mod_auth_kerb-5.4.tar.gz
 fb7c8b18adce99c1bd200a8c1dd7794d0ecee49aa6308180b03537be160ea4426150f1421be9e2462f036296fbd220aa823a2689023899c66817baea8416aad9  mod_auth_kerb-5.4-httpd24.patch
 f8fd9cce15593592995a53374a7dbbf6171c4f5e9e82d5bf59953fcfa6fa81cf6890ec4c9ddc2e0963060ea34e98b590f037b1f0274c284085350e6bc4792748  mod_auth_kerb_compile.patch
 f375dd027eb4b2094a39d321379dade5449a6daac0306eae9bc517344df4e5e65b59ba7b84617df328b00141740da5e515d3f20a448100ee1d95aab9f60e1152  krb5-1.18-fix.patch
 4da4e51baec036fdf035ee6f215453129b4b93a7733887834c08c0c5a7610ebe8e0981ad34a5cd5ed86af58c926bd65417fe09f64ce42d56b41e5051b96f6ca5  mod_auth_kerb-5.4-rcopshack.patch
 4881deb0accbd1ebff88a210036f2c66d443625727580ca25a8a403a96a8fa39edc2a01769584a474d1a1dbf028438a754319c3e318b2bef9114db754d542112  mod_auth_kerb-5.4-fixes.patch
-b6cfa12dbfd37f98de4d5b23f16462efbfa394d4e9dd6a15772aa18fbec0704c3d9f6e5d242d501a8f1c3091abf893de261115ee54ea31d9d9e0a4d1724473a4  mod-auth-kerb.conf"
+b6cfa12dbfd37f98de4d5b23f16462efbfa394d4e9dd6a15772aa18fbec0704c3d9f6e5d242d501a8f1c3091abf893de261115ee54ea31d9d9e0a4d1724473a4  mod-auth-kerb.conf
+"
