main/apache-mod-auth-radius: fix build
works under the assumption that builddir is two levels inside startdir
which breaks under rootbld + packages should not touch startdir anyway

--- a/main/apache-mod-auth-radius/APKBUILD
+++ b/main/apache-mod-auth-radius/APKBUILD
@@ -24,7 +24,7 @@ package() {
 	mkdir -p "$pkgdir"/usr/lib/apache2
 	/usr/share/apache2/build/instdso.sh SH_LIBTOOL='/usr/share/build-1/libtool' mod_auth_radius.la "$pkgdir"/usr/lib/apache2/
 	/usr/share/build-1/libtool --mode=install install mod_auth_radius.la "$pkgdir"/usr/lib/apache2/
-	install -D -m644 ../../mod-auth-radius.conf "$pkgdir"/etc/apache2/conf.d/mod-auth-radius.conf
+	install -D -m644 "$srcdir"/mod-auth-radius.conf "$pkgdir"/etc/apache2/conf.d/mod-auth-radius.conf
 }
 
 sha512sums="
