--- a/main/debian-devscripts/APKBUILD
+++ b/main/debian-devscripts/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="Natanael Copa <ncopa@alpinelinux.org>"
 pkgname=debian-devscripts
 pkgver=2.25.1
-pkgrel=0
+pkgrel=1
 pkgdesc="debian developer scripts"
 url="https://tracker.debian.org/pkg/devscripts"
 arch="noarch"
@@ -14,8 +14,8 @@ subpackages="
 	checkbashisms
 	$pkgname-hardening-check:harden
 	"
-source="https://ftp.debian.org/debian/pool/main/d/devscripts/devscripts_$pkgver.tar.xz"
-builddir="$srcdir"/devscripts/scripts
+source="$pkgname-$pkgver.tar.gz::https://salsa.debian.org/debian/devscripts/-/archive/v$pkgver/devscripts-v$pkgver.tar.gz"
+builddir="$srcdir"/devscripts-v$pkgver/scripts
 
 prepare() {
 	default_prepare
@@ -64,5 +64,5 @@ harden() {
 }
 
 sha512sums="
-57387458ed72264840828b6650378768a1d178c835157887c22d0e7313cbd3b9dea8eba5e609fe0ad3a2b3d6825d8e089510462ca3926f5a0b10667beebe7c62  devscripts_2.25.1.tar.xz
+eeec65e20cfdc4ab0519ffbad25ed08db167de351cc47dc388026aa829d7df93bf7f31057659f3b54055135c28f4b016a9582b42bae10de369dcfceb1d559e92  debian-devscripts-2.25.1.tar.gz
 "
