main/bearssl: fix rootbld
can't rely on stuff like "$PWD/src"

--- a/main/bearssl/APKBUILD
+++ b/main/bearssl/APKBUILD
@@ -15,7 +15,7 @@ source="
 	bearssl.pc
 "
 
-builddir=$PWD/src/BearSSL-${_pkgcommit:0:7}
+builddir="$srcdir"/BearSSL-${_pkgcommit:0:7}
 
 build() {
 	make -j${JOBS} \
