main/ncftp: update source to dev.a.o

--- a/main/ncftp/APKBUILD
+++ b/main/ncftp/APKBUILD
@@ -10,7 +10,9 @@ options="!check"  # No test suite.
 license="ClArtistic"
 makedepends="ncurses-dev"
 subpackages="$pkgname-doc $pkgname-bookmarks $pkgname-dev"
-source="https://www.ncftp.com/public_ftp/ncftp/ncftp-$pkgver-src.tar.xz"
+# upstream removed 3.2.7 from the website(?)
+#source="https://www.ncftp.com/public_ftp/ncftp/ncftp-$pkgver-src.tar.xz"
+source="https://dev.alpinelinux.org/archive/ncftp/ncftp-$pkgver-src.tar.xz"
 
 build() {
 	CFLAGS="-fpermissive" ./configure \
