community/libheif: upgrade to 1.19.7 and enable tests

--- a/community/libheif/APKBUILD
+++ b/community/libheif/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=libheif
-pkgver=1.19.5
+pkgver=1.19.7
 pkgrel=0
 pkgdesc="ISO/IEC 23008-12:2017 HEIF file format decoder and encoder"
 url="https://www.libde265.org/"
@@ -20,7 +20,6 @@ makedepends="
 	gdk-pixbuf-dev
 	samurai
 	"
-options="!check"  # no tests provided
 subpackages="
 	$pkgname-dev
 	heif-thumbnailer
@@ -47,6 +46,10 @@ build() {
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_SKIP_INSTALL_RPATH=ON
 	cmake --build build
+}
+
+check() {
+	ctest --test-dir build
 }
 
 package() {
@@ -77,5 +80,5 @@ loader() {
 }
 
 sha512sums="
-3cad96dea5e40ab6182ed9dd577c6cdb06993aad2c7a4ba10e11a9407e4a0378729ecb71dc74cdd57b3493aace4390ace9ae1a96d9e983ce07fb07bc51ac4904  libheif-1.19.5.tar.gz
+b0c3226c528daf78d8e8f73b5a07b9104e3ff036c553a66fdd0ca494380d8fb03c799241f0ea66b5f7e42d4fec87d186571f2aae9ac4820ffd7ff76d704f487b  libheif-1.19.7.tar.gz
 "
