--- a/main/libavif/APKBUILD
+++ b/main/libavif/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=libavif
 pkgver=1.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Library for encoding and decoding .avif files"
 url="https://aomediacodec.github.io/av1-avif/"
 arch="all"
@@ -20,8 +20,16 @@ makedepends="
 	zlib-dev
 	"
 subpackages="$pkgname-dev $pkgname-apps $pkgname-pixbuf-loader"
+_libargparsever="ee74d1b53bd680748af14e737378de57e2a0a954"
 source="https://github.com/AOMediaCodec/libavif/archive/v$pkgver/libavif-v$pkgver.tar.gz
-	fix-gtest.patch"
+	$pkgname-libargparse-$_libargparsever.tar.gz::https://github.com/kmurray/libargparse/archive/$_libargparsever.tar.gz
+	fix-gtest.patch
+	"
+
+prepare() {
+	default_prepare
+	mv "$srcdir"/libargparse-$_libargparsever "$builddir"/ext/libargparse
+}
 
 build() {
 	CFLAGS="$CFLAGS -flto=auto" \
@@ -65,5 +73,6 @@ loader() {
 
 sha512sums="
 13eb641a17c59d70c465995dca6f921e7a40867053b8d8f0792a68aeaf9dde029daacc77df2049ebb8235ae3b1a35651f5b38a37914bdafe3b8884c64822b1e8  libavif-v1.2.1.tar.gz
+6d6e47f4c1a63f085a90bc4d9f6dca7462f5e72d2a4a3b7a6d6df54632edbd4a9deb8f9b8c08517031b0c9ca89e0a1b48bb35261b3e660e4601e28a39f8e7ef1  libavif-libargparse-ee74d1b53bd680748af14e737378de57e2a0a954.tar.gz
 bce57cee5cbb604bf8607f80f05be2fbd6b339e6085a6201d2a93fdf58ce3eff806a1d8f001b56d33845771cbbe3faf7a7757374fb5f40d8022220cf6d3a7b6c  fix-gtest.patch
 "
