main/lftp: disable lftp-https-get test
test tries to use internet, which doesn't work in rootbld

fixes #17009

--- a/main/lftp/APKBUILD
+++ b/main/lftp/APKBUILD
@@ -45,7 +45,7 @@ package() {
 
 check() {
 	# skip ftp tests due to firewall issues
-	make -C tests check check_PROGRAMS=
+	make -C tests check check_PROGRAMS= check_SCRIPTS="module1 lftp-queue-kill"
 }
 
 sha512sums="
