community/zotero: skip test unit that passes in CI but on builders, pt 2

--- a/community/zotero/APKBUILD
+++ b/community/zotero/APKBUILD
@@ -336,9 +336,11 @@ check() {
 	## should download a missing file: tends to fail
 	## should download a missing file | should remove a tag...: broken on armv7, needs investigation
 	## should handle race condition with /saveItems: passes in CI but not on builders
+	## should allow a remote request without blockRemoteResources: passes in CI but on builders
 	echo "should add an EPUB from a URL with a redirect" > skip-tests
 	echo "should download a missing file" >> skip-tests
 	echo "should handle race condition with /saveItems" >> skip-tests
+	echo "should allow a remote request without blockRemoteResources" >> skip-tests
 	case $CARCH in
 		armv7)
 			echo "should remove a tag when an item is removed from a collection" >> skip-tests
