community/gnome-authenticator: upgrade to 4.6.0 && enable on loongarch64

--- a/community/gnome-authenticator/APKBUILD
+++ b/community/gnome-authenticator/APKBUILD
@@ -1,13 +1,12 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gnome-authenticator
-pkgver=4.4.0
-pkgrel=1
+pkgver=4.6.0
+pkgrel=0
 pkgdesc="Two-Factor Authentication application"
 url="https://gitlab.gnome.org/World/Authenticator"
 # 32-bit: pipewire-rs: https://gitlab.freedesktop.org/pipewire/pipewire-rs/-/issues/43
-# loongarch64: libc crate fails to build
-arch="all !x86 !armhf !armv7 !loongarch64"
+arch="all !x86 !armhf !armv7"
 license="GPL-3.0-only"
 makedepends="
 	cargo
@@ -49,5 +48,5 @@ package() {
 }
 
 sha512sums="
-721e842f21a012117bfcd41e572a80e47d613b707cde4546c4c743499e1449ed4382552afa1b25665fb1e64ced70124a8fe1c3203644aee174575db616de19c9  Authenticator-4.4.0.tar.bz2
+489871f1aafe2b7ab006e403f8137295318557afef147d7afb4273d46c6df0711bdc0f3ede9ed0ccd786c28a0f2da912f9c12f35f33230adb0e35f38768d5dff  Authenticator-4.6.0.tar.bz2
 "
