community/read-it-later: upgrade to 0.6.1 && enable on loongarch64

--- a/community/read-it-later/APKBUILD
+++ b/community/read-it-later/APKBUILD
@@ -1,12 +1,11 @@
 # Contributor: Alistair Francis <alistair@alistair23.me>
 # Maintainer: Alistair Francis <alistair@alistair23.me>
 pkgname=read-it-later
-pkgver=0.5.0
+pkgver=0.6.1
 pkgrel=0
 pkgdesc="Wallabag Client built with GTK"
 url="https://gitlab.gnome.org/World/read-it-later"
-# loongarch64: libc crate fails to build
-arch="all !loongarch64"
+arch="all"
 license="GPL-3.0-only"
 makedepends="
 	bash
@@ -37,5 +36,5 @@ package() {
 }
 
 sha512sums="
-3b83ce6e05de85c13489ac093209cc38e943c0cfa4f375c51569ef45f2f7b3dcc59e532b0a08173ff35dfef8b4fccf34f53028513f9fd56e4d390303e887a24a  read-it-later-0.5.0.tar.gz
+8da1561f03ddafdbefec80cf5deda798d896217193d18f8140df8df59bbc6ab0ac5a37c4d0a69c3292d8fe4e3097ec2ea8989832b99fafe18f4890987a6200d9  read-it-later-0.6.1.tar.gz
 "
