community/*: enable on loongarch64

--- a/community/py3-openapi-core/APKBUILD
+++ b/community/py3-openapi-core/APKBUILD
@@ -3,8 +3,7 @@ pkgname=py3-openapi-core
 pkgdesc="Client-side and server-side support for the OpenAPI Specification v3"
 pkgver=0.19.4
 pkgrel=0
-# loongarch64: blocked by py3-openapi-spec-validator
-arch="noarch !loongarch64"
+arch="noarch"
 url="https://github.com/p1c2u/openapi-core"
 license="BSD-3-Clause"
 depends="python3
