--- a/community/grommunio-admin-api/APKBUILD
+++ b/community/grommunio-admin-api/APKBUILD
@@ -4,8 +4,7 @@ pkgver=1.17
 pkgrel=0
 pkgdesc="Backend for grommunio management"
 # s390x: blocked by grommunio-gromox
-# loongarch64: blocked by py3-jsonschema
-arch="noarch !riscv64 !s390x !loongarch64"
+arch="noarch !riscv64 !s390x"
 url="https://grommunio.com/"
 license="AGPL-3.0-only"
 options="!check" # No test suite
