--- a/community/grommunio-admin-web/APKBUILD
+++ b/community/grommunio-admin-web/APKBUILD
@@ -4,8 +4,7 @@ pkgver=4.0.0
 pkgrel=0
 pkgdesc="Frontend for grommunio management"
 # s390x: blocked by grommunio-gromox through grommunio-admin-api
-# loongarch64: blocked by grommunio-admin-api
-arch="noarch !riscv64 !s390x !loongarch64"
+arch="noarch !riscv64 !s390x"
 url="https://grommunio.com/"
 license="AGPL-3.0-only"
 options="!check net" # No test suite
