testing/bionic_translation: upgrade to 0_git20250209

--- a/testing/bionic_translation/APKBUILD
+++ b/testing/bionic_translation/APKBUILD
@@ -1,9 +1,8 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: Bart Ribbers <bribbers@disroot.org>
+maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=bionic_translation
-pkgver=0_git20240525
+pkgver=0_git20250324
 pkgrel=0
-_commit="8b324301f4ba3f634b479d608eec2df2d1667757"
+_commit="556344096e6e9b9aa62d03964e252ae0563e6fb3"
 pkgdesc="A set of libraries for loading bionic-linked .so files on musl/glibc"
 url="https://gitlab.com/android_translation_layer/bionic_translation"
 arch="x86_64 aarch64 armv7"
@@ -35,5 +34,5 @@ package() {
 }
 
 sha512sums="
-9a522b3fe2b6e02b5683d8ac979a1ab33b8b8c7674de28f09155c21e279e5bdaffe7ab18aaa0c3d48246d90b285a682f04304d57ebda6af04e09012d41201f36  bionic_translation-8b324301f4ba3f634b479d608eec2df2d1667757.tar.gz
+4105a6e0d1a6c9aa8de3248b903e4dc4b3ca13d845ccc9fe9f5338603682267efef43626379b890a555d055d640ded92fba92620507c65db746333b766556047  bionic_translation-556344096e6e9b9aa62d03964e252ae0563e6fb3.tar.gz
 "
