testing/art_standalone: upgrade to 0_git20250305

--- a/testing/art_standalone/APKBUILD
+++ b/testing/art_standalone/APKBUILD
@@ -1,8 +1,8 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=art_standalone
-pkgver=0_git20250115
+pkgver=0_git20250324
 pkgrel=0
-_commit="aa709f68d03e83d35c5e8a58e77760e5be9185bc"
+_commit="e9d9c2e85af72fccfb6f3621bc1cc041f8f6d338"
 pkgdesc="A standalone version of Dalvik with Art build in"
 url="https://gitlab.com/android_translation_layer/art_standalone"
 arch="x86_64 aarch64 armv7"
@@ -27,6 +27,7 @@ makedepends="$depends_dev
 	java-common
 	libbsd-dev
 	libcap-dev
+	libpng-dev
 	libselinux-dev
 	libunwind-dev
 	lz4-dev
@@ -116,10 +117,10 @@ libandroidfw_dev() {
 }
 
 adbd() {
-	depends=""
+	depends="$pkgname"
 	amove usr/bin/adbd
 }
 
 sha512sums="
-1330fdff97d7c1bd1a7e47938accb6dc794610955061f24986497afdfb70ca0d935b19472274732bb9dda4bf2982cb2bd90cac5959b42dc8b961d10076196cec  art_standalone-aa709f68d03e83d35c5e8a58e77760e5be9185bc.tar.gz
+d4ad3fa105be794f971aed4287de859eba94c83b8e7e020ee968b140abe5b6c0f09aa9ca8d69a81bbdcc20470ca44cf2ce0f31697d429aa81a70f2e8c34844de  art_standalone-e9d9c2e85af72fccfb6f3621bc1cc041f8f6d338.tar.gz
 "
