community/vte3: depend on adwaita-fonts
vte3 uses gsettings-desktop-schemas' monospace-font value for the
terminal font name. Since gsettings-desktop-schemas 48 it's switched to
adwaita-fonts.

Link: https://gitlab.postmarketos.org/postmarketOS/pmaports/-/issues/3618
Link: https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/81810
See-also: https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/81597#note_491422

--- a/community/vte3/APKBUILD
+++ b/community/vte3/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=vte3
 pkgver=0.80.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Virtual Terminal Emulator library"
 url="https://gitlab.gnome.org/GNOME/vte"
 arch="all"
 license="LGPL-2.0-or-later"
 subpackages="$pkgname-dbg $pkgname-dev $pkgname-gtk4 $pkgname-lang $pkgname-profile"
-depends="$pkgname-profile"
+depends="adwaita-fonts $pkgname-profile"
 makedepends="
 	bash
 	fast_float
@@ -53,7 +53,7 @@ package() {
 
 gtk4() {
 	pkgdesc="$pkgdesc (gtk4 component)"
-	depends="$pkgname-profile"
+	depends="adwaita-fonts $pkgname-profile"
 
 	amove usr/bin/vte-*-gtk4
 	amove usr/lib/libvte-*-gtk4.so.*
