community/gnome-keyring: upgrade to 48.0
https://gitlab.gnome.org/GNOME/gnome-keyring/-/blob/48.0/NEWS

--- a/community/gnome-keyring/APKBUILD
+++ b/community/gnome-keyring/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=gnome-keyring
-pkgver=46.2
-pkgrel=3
+pkgver=48.0
+pkgrel=0
 pkgdesc="GNOME keyring"
 url="https://wiki.gnome.org//Projects/GnomeKeyring"
 arch="all"
@@ -10,8 +10,6 @@ license="GPL-2.0-only LGPL-2.0-only"
 # the gcr binaries are needed for things to open the keyring via libsecret
 depends="gcr"
 makedepends="
-	autoconf
-	automake
 	gcr-dev
 	gobject-introspection-dev
 	gtk+3.0-dev
@@ -21,43 +19,38 @@ makedepends="
 	libgcrypt-dev
 	libxslt
 	linux-pam-dev
+	meson
 	openssh-client
 	"
 checkdepends="
-	dbus-x11
+	dbus
 	python3
-	xvfb-run
 	"
 provides="dbus:org.freedesktop.Secrets"
 # Highest priority of the bunch since it has the least deps
 provider_priority=100
-options="!check" # Failing tests on 32-bit architectures
+options="!check" # flaky
 subpackages="$pkgname-lang $pkgname-doc $pkgname-openrc $pkgname-pam"
 source="https://download.gnome.org/sources/gnome-keyring/${pkgver%.*}/gnome-keyring-$pkgver.tar.xz
-	0001-build-Use-p11_module_configs-as-default-pkcs11-confi.patch
 	gnome-keyring.confd
 	gnome-keyring.initd
+	libgkm-source-gkm-marshal.patch
 	"
 
 build() {
-	export LDFLAGS="$LDFLAGS -lintl"
-	autoreconf -vfi
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr \
-		--sysconfdir=/etc \
-		--with-libcap-ng=no
-	make
+	abuild-meson \
+		-Dsystemd=disabled \
+		. output
+	meson compile -C output
 }
 
 check() {
-	xvfb-run make check -j1
+	dbus-run-session \
+	meson test --no-rebuild --print-errorlogs -C output
 }
 
 package() {
-	export GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" meson install --no-rebuild -C output
 
 	# Install the OpenRC user service for gnome-keyring.
 	install -Dm755 "$srcdir"/gnome-keyring.initd \
@@ -78,8 +71,8 @@ pam() {
 }
 
 sha512sums="
-4229ca0606bdd1b84a3c737288df7f1fc1f8715734e3001964babd882201c3d818deabb3a7662dbf9b67316f03b234de84da3128fb991a500ef8305c2f962ba2  gnome-keyring-46.2.tar.xz
-53e04eade3579fe5d65d11d6cde6c5fdffc9f73a3a7f372b1f4dbc7437212e753123c12854d3a5a7a22f3beb1b00604eec0371615ceb0f7024cb38cf35e33065  0001-build-Use-p11_module_configs-as-default-pkcs11-confi.patch
+9eac06164c22a854a171f538467403c6764a6a6c2665959d721f5e3515bd91c8709a374c292cde93143f944b4ed7ec9b5613d28808d7e79839a9377d5aaa5daa  gnome-keyring-48.0.tar.xz
 fdd9d02daf7beda574c63d6f17e56fdbe89194c42c60802f24a090e00d83104aa126771d5bfddc2ce586488d2f512164ba610d3fb5e1a85de7f497823fa757c2  gnome-keyring.confd
 bbdf251fa87bbbc80d62ed72e4d1981a3f419572ded01d7bdc45c328a1043c9e673840b23b3d0bc9fa48a9b125de234e30c9531aefa71348707a0ca81b61bb91  gnome-keyring.initd
+7e2494f11423136856813349d4c0363b3cb11f0ea147048cfce10e383f93c8901b903bdcb02581268de7cd8f2513acf169f767de860134beb4716b5ee5323410  libgkm-source-gkm-marshal.patch
 "
