community/calls: upgrade to 48.0
https://gitlab.gnome.org/GNOME/calls/-/blob/v48.0/NEWS

--- a/community/calls/APKBUILD
+++ b/community/calls/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=calls
-pkgver=47.0
+pkgver=48.0
 pkgrel=0
 pkgdesc="Phone dialer and call handler"
 # armhf blocked by libpeas2 -> gjs-dev -> mozjs
@@ -35,9 +35,20 @@ makedepends="
 	vala
 	"
 subpackages="$pkgname-doc $pkgname-dbg $pkgname-lang"
-source="https://download.gnome.org/sources/calls/${pkgver%%.*}/calls-$pkgver.tar.xz
+_libcall_ui_commit="f66056ace818ff19b507335634dd67138a92c77f"
+# temporary upstream issue: https://gitlab.gnome.org/Infrastructure/openshift-images/gnome-release-service/-/issues/14
+#source="https://download.gnome.org/sources/calls/${pkgver%%.*}/calls-$pkgver.tar.xz
+source="https://gitlab.gnome.org/GNOME/calls/-/archive/v$pkgver/calls-v$pkgver.tar.gz
+	https://gitlab.gnome.org/World/Phosh/libcall-ui/-/archive/$_libcall_ui_commit/libcall-ui-$_libcall_ui_commit.tar.gz
 	"
 options="!check" # Requires running Wayland compositor
+builddir="$srcdir/$pkgname-v$pkgver"
+
+prepare() {
+	default_prepare
+
+	mv "$srcdir"/libcall-ui-$_libcall_ui_commit/* "$builddir"/subprojects/libcall-ui
+}
 
 build() {
 	abuild-meson \
@@ -59,5 +70,6 @@ package() {
 }
 
 sha512sums="
-422f76b11de100ba347ef352bc13d1343a442fccf46331e605c496ee000691e5f6500503cbfbaffff8aa308a9a15d84334b457a891bc039dff28e413308bad65  calls-47.0.tar.xz
+88154b088c0bc8716484d75c21212b1b3660299d8ebf52fb8f104437a1656805a8fd7fd76bf7aed4773600caa6fca668bef061bdff1d4fd0749418687f5759fe  calls-v48.0.tar.gz
+26e2ebd3332df4280accd13870e739dc7c2c39bd9df5a5a6eedd3818fa3478908318c280345e5b7e666e89dedb88841548328fa1daca9c510f5044e909da0bc1  libcall-ui-f66056ace818ff19b507335634dd67138a92c77f.tar.gz
 "
