community/tinysparql: fix s390x test

--- a/community/tinysparql/APKBUILD
+++ b/community/tinysparql/APKBUILD
@@ -41,14 +41,13 @@ subpackages="
 	lib$pkgname:libs
 	$pkgname-bash-completion
 	"
-source="https://download.gnome.org/sources/tinysparql/${pkgver%.*}/tinysparql-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/tinysparql/${pkgver%.*}/tinysparql-$pkgver.tar.xz
+	fix-deserialize-test.patch
+	"
 
 # for backwards compatibility
 replaces="tracker"
 provides="tracker=$pkgver-r$pkgrel"
-
-# https://gitlab.gnome.org/GNOME/tinysparql/-/issues/482
-[ "$CARCH" = "s390x" ] && options="$options !check"
 
 build() {
 	abuild-meson \
@@ -82,4 +81,5 @@ libs() {
 
 sha512sums="
 04aa0715696b4b21af8f52124be23634b0a2216b49a9bf2aa08d5a0baf1f323e02c05397ac167bfce010da99af4a0d7b13058d77b4ba114ad3de90edb9c26bf3  tinysparql-3.9.1.tar.xz
+df56b7be028aa3e9b5649b8c8061d711ed49226ffb8def46861252ecf264bbcc6cb7f77854a88bd3ce5983f79b3405a5fa42689a07c5f0e54bee30f401dd53e7  fix-deserialize-test.patch
 "
