--- a/main/py3-dbus/APKBUILD
+++ b/main/py3-dbus/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-dbus
 _pkgname=dbus-python
-pkgver=1.3.2
-pkgrel=6
+pkgver=1.4.0
+pkgrel=0
 pkgdesc="Python3 bindings for DBUS"
 url="https://www.freedesktop.org/wiki/Software/DBusBindings"
 arch="all"
@@ -13,7 +13,7 @@ depends_dev="py3-dbus"
 makedepends="dbus-glib-dev python3-dev meson"
 checkdepends="bash dbus py3-gobject3 py3-tappy"
 subpackages="$pkgname-dev $pkgname-pyc"
-source="https://dbus.freedesktop.org/releases/dbus-python/$_pkgname-$pkgver.tar.gz"
+source="https://dbus.freedesktop.org/releases/dbus-python/$_pkgname-$pkgver.tar.xz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
@@ -36,5 +36,5 @@ package() {
 }
 
 sha512sums="
-9b2885c9c2914142c72487f766b1cdd28a255d9f5a87eaf8f4eb420c6e096a77f210ac5a4fac9843c6531974872880cc28b7e45940e198856e984dcc0715519a  dbus-python-1.3.2.tar.gz
+defd5fba8348635ce52654b7e93e6cacf52966f6facfb7bb04fc77f2f82129e0b7673d4f3d483ef3321985172987d8c3265b27b9200c68c39c729567ffa21456  dbus-python-1.4.0.tar.xz
 "
