--- a/testing/cpu-x/APKBUILD
+++ b/testing/cpu-x/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Díaz Urbaneja Diego <sodomon2@gmail.com>
 # Maintainer: Díaz Urbaneja Diego <sodomon2@gmail.com>
 pkgname=cpu-x
-pkgver=5.0.4
-pkgrel=1
+pkgver=5.2.0
+pkgrel=0
 pkgdesc="CPU-X is a system profiling and monitoring application (similar to CPU-Z)"
 url="https://thetumultuousunicornofdarkness.github.io/CPU-X/"
-arch="x86_64 x86" # no libcpuid in others architectures
+arch="x86_64 x86 aarch64" # no libcpuid in others architectures
 license="GPL-3.0-only"
 depends="
 	gtkmm3
@@ -35,6 +35,7 @@ subpackages="$pkgname-lang $pkgname-bash-completion $pkgname-zsh-completion $pkg
 options="!check" # check failed
 source="$pkgname-$pkgver.tar.gz::https://github.com/TheTumultuousUnicornOfDarkness/CPU-X/archive/refs/tags/v$pkgver.tar.gz
 	no-bracktrace.patch
+	fix-x86.patch
 	"
 builddir="$srcdir/CPU-X-$pkgver"
 
@@ -59,6 +60,7 @@ package() {
 }
 
 sha512sums="
-134f8a8fe6782279f7288d891a66b3d426b0e173de3d5445367c94029aa9d33348d037f5bca25690aff16f00d261777a71de6847991e564578099b03ff398453  cpu-x-5.0.4.tar.gz
+918c73945868b40fed43626f1eb80b3508a76998b3d525708b94da6cf1624223d6b6b9a8d304c2a51ac1e1f49fd44a9480b14c15a2c54c2eee0466aa4ac0b5a9  cpu-x-5.2.0.tar.gz
 96f0e100a2ca2898b014ca5f52937a2de041743777fbf318e2d3f82240e9fe40106d295c2ce80478e1540ed35c96a98c70acd1549b89daae44f6d9ff88251734  no-bracktrace.patch
+9c6de212e00b1c21dfc2da73010b383873f63f906ce19571c654800914e2882c88225455411be33a00837e2454908aabad89372736f5429770d4ccfc8b66fe5e  fix-x86.patch
 "
