community/aaaaxy: upgrade to 1.6.64

--- a/community/aaaaxy/APKBUILD
+++ b/community/aaaaxy/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rudolf Polzer <divVerent@gmail.com>
 # Maintainer: Rudolf Polzer <divVerent@gmail.com>
 pkgname=aaaaxy
-pkgver=1.6.0
-pkgrel=1
+pkgver=1.6.64
+pkgrel=0
 pkgdesc="A nonlinear puzzle platformer taking place in impossible spaces"
 url="https://divVerent.github.io/aaaaxy/"
 arch="all !s390x !armhf !armv7"
@@ -17,6 +17,7 @@ makedepends="
 	libxi-dev
 	libxrandr-dev
 	mesa-dev
+	strip-nondeterminism
 	zip
 "
 checkdepends="xvfb-run mesa-dri-gallium"
@@ -61,6 +62,6 @@ package() {
 }
 
 sha512sums="
-8041983364fa1c162b5c00c9a5726a22c6a8c31393f01c273fc916629b81ce3f1e25f40c379f0fa88e8bf8d0318a258982127f17d36659c4fb74c025c4e6e8fd  aaaaxy-1.6.0.tar.gz
-b34cbbfdcb6887e15518f3f62c1aeb76ef1319953bda9cbd781f4877314dcfbd9219fcb9535b19f597d46af6a15a0d491f4e38527cd4e35123118a8fe0dc76eb  sdl-gamecontrollerdb-for-aaaaxy-v1.6.0.zip
+fb516f204044ff9c44c8c9a146773d92d5a1f014be6001e5fa693f7fa884e67264ff5e1e9260d1115d941f70eaa9f662d2a89ed6e80693f78f6aeb8fb9eeaf93  aaaaxy-1.6.64.tar.gz
+dc9a353ab59c651c32006731ac6fff9569f6f69b5ab5b37b07f6883d7518ea0c7911ae3184d2cbf371620e8e372a95934e922dbb9a0478536bb66ab20627daef  sdl-gamecontrollerdb-for-aaaaxy-v1.6.64.zip
 "
