--- a/community/yabasic/APKBUILD
+++ b/community/yabasic/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=yabasic
-pkgver=2.91.1
+pkgver=2.91.2
 pkgrel=0
 pkgdesc="Simple BASIC interpreter"
 url="https://github.com/marcIhm/yabasic"
@@ -13,6 +13,10 @@ makedepends="
 	libx11-dev
 	libxt-dev
 	ncurses-dev
+	"
+checkdepends="
+	bash
+	tmux
 	"
 subpackages="$pkgname-doc"
 source="https://2484.de/yabasic/download/yabasic-$pkgver.tar.gz
@@ -55,6 +59,6 @@ package() {
 }
 
 sha512sums="
-3ed1a6eebe86f94dd03caedf43f5c7d511df1b6e9901d9c2c63bb3b960e7efc83ecadd3342f8a2bfd58440dc20231cab140b13282d7c424d4953e35481d72907  yabasic-2.91.1.tar.gz
-82c5cc92c17961cba33428647b0e69d34c1f75b5ad6538d5467188175a850d81fdcf81daf2ead3aa1aec07144f9c7f32f0a8b8b623b8954ab7566b1f9a5f4c63  gcc15.patch
+3f67b2165a28ac20161566e07e46747cb726667832b3ee10d05e84d0c901c63003e824e3b4836a630c741e433a077a8c923befbb9f06414eefa728954ce24edf  yabasic-2.91.2.tar.gz
+c9f42c9eb6914d59b0dad7be3ca67e4b9b3b92dc388b8588a7d61f653ffc3ec28a119f1bdb69dd94bf2441b2abb711fbd29180b7c551858968732a23a474eb16  gcc15.patch
 "
