community/mozjs: fix build with icu 76

--- a/community/mozjs/APKBUILD
+++ b/community/mozjs/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Krassy Boykinov <kboykinov@teamcentrixx.com>
 pkgname=mozjs
 pkgver=128.8.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Standalone Mozilla JavaScript engine (ESR)"
 url="https://spidermonkey.dev/"
 # armhf: unsupported assembly
@@ -35,6 +35,7 @@ subpackages="$pkgname-dev"
 source="https://ftp.mozilla.org/pub/firefox/releases/${pkgver}esr/source/firefox-${pkgver}esr.source.tar.xz
 	fix-rust-target.patch
 	libc-loongarch64-support.patch
+	0001-Link-with-icu-uc-to-fix-build-with-ICU-76.patch
 	"
 builddir="$srcdir"/firefox-$pkgver
 
@@ -157,4 +158,5 @@ sha512sums="
 7c0ef22bc14d4fa248cbae14d629174c9c967f891f4525f609760595f5a108aedf7dd804d1b63b97ec268613fa98378f4742a9b6ab562454351cf21175fdb802  firefox-128.8.0esr.source.tar.xz
 cd68b89e29e5f6379fbd5679db27b9a5ef70ea65e51c0d0a8137e1f1fd210e35a8cfb047798e9549bc7275606d7ec5c8d8af1335d29da4699db7acd8bc7ff556  fix-rust-target.patch
 39a1d3de17e9a3fcd8328e677e76eca1fdc6d850f0febbcb88a747c9b3ed0d4dafc4ee9e04de7bbcb3d851b34d9681bedaed954f8651c5f70043683717138a54  libc-loongarch64-support.patch
+48f4dbda4097bdf49e48b2922610813284f591b98a608f78d91c29685cf9447b60027dd85a1faea008dac1599a25c23d0606a8bdff904b842105c427265f6590  0001-Link-with-icu-uc-to-fix-build-with-ICU-76.patch
 "
