community/libcpuid: upgrade to 0.7.1
https://github.com/anrieff/libcpuid/blob/master/ChangeLog#L221-L229

--- a/community/libcpuid/APKBUILD
+++ b/community/libcpuid/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=libcpuid
-pkgver=0.7.0
+pkgver=0.7.1
 pkgrel=0
 pkgdesc="C library for x86 CPU detection and feature extraction"
 url="https://github.com/anrieff/libcpuid"
-arch="x86 x86_64"
+arch="x86 x86_64 aarch64"
 license="BSD-2-Clause"
 makedepends="cmake samurai"
 checkdepends="python3"
@@ -40,5 +40,5 @@ tool() {
 }
 
 sha512sums="
-26353763461cbbe664ddaa6933cbd9016e3b11d8a056bc8c2b92818dfe3a43fcda76a92270f716eeb00ae61b75288c7079add8d7ac2290a0a0d5c3bd7d898d44  libcpuid-0.7.0.tar.gz
+124f4ad01e34d1494b549c62382e65bb3cea50785b59cd1f734a9a80bd099af96b84e32c70ed6326d6697977f58495e84973ff07a8648a5d7f6a58861f0ab6c1  libcpuid-0.7.1.tar.gz
 "
