community/gnucash: rebuild against ICU 76

--- a/community/gnucash/APKBUILD
+++ b/community/gnucash/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="Thomas Böhler <witcher@wiredspace.de>"
 pkgname=gnucash
 pkgver=5.10
-pkgrel=1
+pkgrel=2
 pkgdesc="GnuCash Double-Entry Accounting Program"
 url="https://gnucash.org/"
 # s390x: Tests fail because of test-gnc-{timezone,datetime} (SEGFAULT)
@@ -55,6 +55,7 @@ source="
 	disable-gnc-date.patch
 	disable-gnc-timezone-and-test-lots.patch
 	swig4.3.patch
+	Bug-799480-Fails-to-build-with-ICU-76.patch
 	"
 
 build() {
@@ -110,4 +111,5 @@ d3c9b9c2dfe484a8760544b810c7f21e5c652b6fd3115d9ebc84c5beaaeb5c7e30ce46b2943d7e53
 a7723a11aeb082290373d574d2971b6e768b83936995316792caa44ddd2d08b41e0aab02622796d0b297c054623d95db9b7c6136792aa28cb649d310d80d731f  disable-gnc-date.patch
 eced870915434711c3260188a48ce8446f95c4d4258a61600785734e82cd1f483e8e3fa9013234899b80e775ef0f51d17a688a30d311d7786f5ae79ab606962a  disable-gnc-timezone-and-test-lots.patch
 93c85cb544bde37c10ab978a9338b2d153530f38bea2a3b85b2fd4eba9c883e2aaff2fa97353b8564bd83bad3cae66af0303f52b0df2d21c7007833dfb6d6945  swig4.3.patch
+935937c8a62b60d8d326a1bb6b021c6f8917dac1a8acd0c964aa7d028b97bacb28c1eb21b9f509fd1ad1eaba8269d7f3f8b56f77248a0e28ae880ea9a04df6a7  Bug-799480-Fails-to-build-with-ICU-76.patch
 "
