community/grommunio-gromox: upgrade to 2.44

--- a/community/grommunio-gromox/APKBUILD
+++ b/community/grommunio-gromox/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Noel Kuntze <noel.kuntze@contauro.com>
 pkgname=grommunio-gromox
-pkgver=2.42
-pkgrel=1
+pkgver=2.44
+pkgrel=0
 pkgdesc="Open Source Groupware Solution"
 arch="all !riscv64 !s390x" # test failure on s390x
 url="https://grommunio.com/"
@@ -20,11 +20,11 @@ depends="
 makedepends="
 	autoconf
 	automake
+	c-ares-dev
 	curl-dev
 	gumbo-parser-dev
 	jsoncpp-dev
 	krb5-dev
-	ldns-dev
 	libhx-dev
 	libtool
 	libwmime-dev
@@ -163,8 +163,8 @@ package() {
 }
 
 sha512sums="
-e6ada060a764a03bc6f99bbcd4a20fc39e1c23ea4b84c00786a3a30a3ca6e972ad2e8ce7a86c760605160dca3a1ea82f7bc61a0822ea52bb225a7b21a2c7b56c  gromox-2.42.tar.gz
-5d10c27e171bfc1e54e108b2a8cdd972f343aae198da660b336996eb3145f2fc6c6a96361657d4cbf69345f9932b74198be09ce0f76952f1ed61eca078c33f1c  0001-iconv-ignore.patch
+4c38eb842df6bc15de5c42a54c3e10e7e2ae7bd37ac0bef0d27329abf522aac15271f0fec65a590c18f256f38fee5f6771e5a038778763b03b9cf0867886bbfb  gromox-2.44.tar.gz
+6503d20b60d2017efbb3f4b0de6656d059391ab90f2e6346c83293371d0fed242a6003a4385a3fb0b5a0b1ca4c45d0a3136fd7080e8d08d42c0cc0d68baeac2d  0001-iconv-ignore.patch
 88bd2ef0f586e5147554d960d8c448b4896de05ca3d397a94131d409409a2bad1a858b67cfac41f609125f60471f53f03df53b44b04fd28ef6dede50a0e5d7fe  gromox-delivery-queue.initd
 7081e5e45ecea883a5bf6ebba17ab3bd70543f15745456a4f33cb853078f66fdb8d20a950281a4cc6b8b6f32c4c5123f82bbeda5be7fa3226ac32fb61e715c42  gromox-delivery.initd
 b21657db42dcd4186a5e848871743933dbff0649726620fe487f827fca47c4f1dd874d34667ebbf3c0d3e30fc16ff4915bede9a74fd582f0e435fefa1779255c  gromox-event.initd
@@ -175,7 +175,7 @@ b73835c9b28c5db8b1af490600c5a67376656d36ea2ba9cd454bd56338ecaa78de12cd63bbfd6b63
 b0fcb6d7add8bed4a1faa192a7672d2b5cd7c0e118bb91d954081610fd00399c20469d2f6434485f8804c14af3e5fd9814027b66e1cdba2de370f8187a7d2635  gromox-timer.initd
 d375d63d1bc13207aabb906d8455d167795e88c0400ac420e4ec1103eed70062b04a0b5640852041257161fc11609eca8ad9097742d50973546e3cbfac47a7c4  gromox-zcore.initd
 bbb5e3254eabbf3cd400461ae248378c35d0e2ad3a35b5bc1bd86c9b8f292513301ffb548cfd53a29a661aceeb567448708d61d3a6fb376efade386ec6cba23f  gromox-cleaner.cron
-223aa4cafe8cd4ac1b746dd40126ae2bde43c992f991a09e4f3f3a753190d13d5413ba4c4bbb589dc5d56e8b49b875dfb464e36ed4b95378bd78af2e6e9e2193  gromox-requeue.cron
+ff6c84971630e169876800b18f7595d362d228baffa0b3e0812a9e631bd4365edd2c1361037af48b1e63e4208ed099c5eef905349901d9c6f2dff262e765f871  gromox-requeue.cron
 4fa3441ceffae017aa7dc9d5b0c3bca3e2066eed8a4390b06a60683e3a66a1c951dd832e08dbbb9ba9da0918b081fc1ff626e88b431f6ebacdecd32562ca30a3  gromox.cfg
 e610fd0cb1392f08cd5cd30450fc9d6cdd6a2724ff439a38a2c6623755c9e2afdeee2f9d45d965ba0dd043b5c3942c1a0d69061f7cc9b1ecdd680109e7d756de  delivery.cfg
 b9f4d736c41278b320bae89e5c0d6674fd5b628bc6fb6c5b88b15e37617f39d228a884988aeaba5b2fbe05a64372ed7f8094cdc363a2a1901b0c6c1735844e92  event.cfg
