--- a/testing/kew/APKBUILD
+++ b/testing/kew/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Saijin-Naib <Saijin-Naib_package-maintenance@outlook.com>
 # Maintainer: Saijin-Naib <Saijin-Naib_package-maintenance@outlook.com>
 pkgname=kew
-pkgver=3.0.3
+pkgver=3.1.2
 pkgrel=0
 pkgdesc="A terminal music player with album art & visualizer"
 url="https://github.com/ravachol/kew"
@@ -9,6 +9,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="
 	chafa-dev
+	curl-dev
 	faad2-dev
 	fftw-dev
 	glib-dev
@@ -32,5 +33,5 @@ package() {
 }
 
 sha512sums="
-9e14c6b7d12e93cf1f7cd9e930d81f903d5013e22bb183e4f2a9b4ddba70e74b030a61febcf3e149823b492294cca402f4f8382b2088264aa4f3be7786fcf41a  kew-3.0.3.tar.gz
+6510e7d90232486727e9072d4775a723f9ae33a8d91739b49cfbb10086ebba2dfd86adcbec84b1ea6998d7f67913ea842bd2d8fde371857506b1cae3efd03daf  kew-3.1.2.tar.gz
 "
