testing/*: enable on loongarch64

--- a/testing/clevis-extra-pins/APKBUILD
+++ b/testing/clevis-extra-pins/APKBUILD
@@ -7,8 +7,7 @@ pkgrel=0
 pkgdesc="Additional pins for Clevis binding framework"
 url="https://github.com/anatol/clevis.go"
 license="GPL-3.0-or-later"
-# loongarch64: blocked by clevis
-arch="noarch !loongarch64"
+arch="noarch"
 depends="bash clevis"
 source="https://github.com/anatol/clevis.go/archive/$_gitrev/clevis-extra-pins-$pkgver.tar.gz"
 builddir="$srcdir/clevis.go-$_gitrev"
