--- a/testing/py3-pytest-regtest/APKBUILD
+++ b/testing/py3-pytest-regtest/APKBUILD
@@ -4,8 +4,7 @@ pkgver=2.3.2
 pkgrel=1
 pkgdesc="pytest-regtest is a pytest-plugin for implementing regression tests"
 url="https://gitlab.com/uweschmitt/pytest-regtest"
-# loongarch64: blocked by twine
-arch="noarch !loongarch64"
+arch="noarch"
 license="MIT"
 depends="
 	py3-pytest
