--- a/testing/clevis/APKBUILD
+++ b/testing/clevis/APKBUILD
@@ -6,8 +6,7 @@ pkgrel=0
 pkgdesc="Pluggable framework for automated decryption"
 url="https://github.com/latchset/clevis"
 license="GPL-3.0-or-later WITH OpenSSL-Exception"
-# loongarch64: blocked by tang
-arch="all !loongarch64"
+arch="all"
 depends="bash cryptsetup jose libpwquality"
 makedepends="
 	asciidoc
