testing/mitra: upgrade to 3.21.0

--- a/testing/mitra/config.yaml
+++ b/testing/mitra/config.yaml
@@ -103,6 +103,11 @@ retention:
 #blocked_instances: []
 #allowed_instances: []
 
+# OpenMetrics endpoint (/metrics)
+#metrics:
+#  auth_username: null
+#  auth_password: null
+
 # Blockchain integrations
 #blockchains:
 #  - chain_id: monero:mainnet
