--- a/testing/gpscorrelate/APKBUILD
+++ b/testing/gpscorrelate/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Saijin-Naib <Saijin-Naib_package-maintenance@outlook.com>
 # Maintainer: Saijin-Naib <Saijin-Naib_package-maintenance@outlook.com>
 pkgname=gpscorrelate
-pkgver=2.2
+pkgver=2.3
 pkgrel=0
 pkgdesc="Program to match GPS tracks to photographs and store the matches in EXIF"
 url="https://dfandrich.github.io/gpscorrelate/"
@@ -17,6 +17,7 @@ makedepends="
 	libxml2-dev
 	libxslt-dev
 	"
+checkdepends="exiv2"
 subpackages="$pkgname-cli $pkgname-doc $pkgname-lang"
 source="https://github.com/dfandrich/gpscorrelate/archive/$pkgver/gpscorrelate-$pkgver.tar.gz"
 
@@ -38,5 +39,5 @@ cli() {
 }
 
 sha512sums="
-e62013fc5a897ac534ce768c1f34089f816010b7f374032d2b0ebb2aa93d755f346520ab31b8dc040dfe7d1cc8201d3c1ea065bf223ddc4bc7ee9a20e17bfe46  gpscorrelate-2.2.tar.gz
+2370492f0bb23c08c0cfd3d33ed77ea820767d835fecc02a6d82eb0ed463c866a3f498442d7026c70c1724841a09756f0d865f7d9ad899b6591a42291c67d32c  gpscorrelate-2.3.tar.gz
 "
