--- a/community/nota/APKBUILD
+++ b/community/nota/APKBUILD
@@ -12,8 +12,8 @@ pkgver=4.0.0
 pkgrel=0
 pkgdesc="Nota is a simple and convergent text editor"
 # armhf blocked by qt5-qtdeclarative
-# s390x, ppc64le, riscv64 and loongarch64 blocked by qt5-qtwebengine
-arch="all !armhf !s390x !ppc64le !riscv64 !loongarch64"
+# s390x, ppc64le and riscv64 blocked by qt5-qtwebengine
+arch="all !armhf !s390x !ppc64le !riscv64"
 url="https://invent.kde.org/maui/nota"
 license="GPL-2.0-or-later"
 depends="
