--- a/community/vvave/APKBUILD
+++ b/community/vvave/APKBUILD
@@ -8,8 +8,8 @@ pkgver=4.0.0
 pkgrel=1
 pkgdesc="VVAVE Music Player"
 # armhf blocked by qt5-qtdeclarative
-# s390x, ppc64le, riscv64 and loongarch64 blocked by qt5-qtwebview
-arch="all !armhf !s390x !ppc64le !riscv64 !loongarch64"
+# s390x, ppc64le and riscv64 blocked by qt5-qtwebview
+arch="all !armhf !s390x !ppc64le !riscv64"
 url="https://invent.kde.org/maui/vvave"
 license="GPL-3.0-or-later"
 depends="
