--- a/community/xdp-tools/APKBUILD
+++ b/community/xdp-tools/APKBUILD
@@ -4,7 +4,7 @@ pkgver=1.5.1
 pkgrel=0
 pkgdesc="A library and utilities for use with XDP"
 url="https://github.com/xdp-project/xdp-tools"
-arch="all !ppc64le"
+arch="all"
 license="BSD-2-Clause AND GPL-2.0-only AND GPL-2.0-or-later AND LGPL-2.1-only AND LGPL-2.1-or-later"
 options="!check" # requires real root permissions
 makedepends="libbpf-dev libpcap-dev zlib-dev linux-headers clang llvm grep emacs-nox m4 git bpftool"
