testing/elementary-camera: enable on s390x

--- a/testing/elementary-camera/APKBUILD
+++ b/testing/elementary-camera/APKBUILD
@@ -5,8 +5,7 @@ pkgver=8.0.0
 pkgrel=0
 pkgdesc="Camera app designed for elementary OS"
 url="https://github.com/elementary/camera"
-# s390x: blocked by gst-plugins-rs-gtk4
-arch="all !s390x"
+arch="all"
 license="GPL-3.0-or-later"
 depends="gst-plugins-rs-gtk4"
 makedepends="
