community/mednafen: update config.sub & add cflags on loongarch64

--- a/community/mednafen/APKBUILD
+++ b/community/mednafen/APKBUILD
@@ -3,11 +3,10 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=mednafen
 pkgver=1.32.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A command-line multi-system emulator"
 url="https://mednafen.github.io/"
-# loongarch64: lang failed
-arch="all !s390x !loongarch64"
+arch="all !s390x"
 license="GPL-2.0-only"
 makedepends="alsa-lib-dev flac-dev libogg-dev libsndfile-dev libvorbis-dev
 	lzo-dev sdl2-dev zlib-dev"
@@ -15,7 +14,14 @@ subpackages="$pkgname-lang"
 source="https://mednafen.github.io/releases/files/mednafen-$pkgver.tar.xz"
 builddir="$srcdir"/$pkgname
 
+prepare() {
+	default_prepare
+	update_config_sub
+}
+
 build() {
+	CFLAGS="$CFLAGS -fPIC"
+	CXXFLAGS="$CXXFLAGS -fPIC"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
